--- a/app.json
+++ b/app.json
@@ -4,7 +4,7 @@
     "slug": "WineWildernessWanderlust",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/icon.png",
+    "icon": "./assets/images/wander-guide-logo.png",
     "scheme": "winewildernesswanderlust",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
