--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
-    "stripe": "^18.4.0"
+    "stripe": "^18.4.0",
+    "@react-native-community/netinfo": "11.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
