--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -10,26 +10,20 @@
 # Specifies the JVM arguments used for the daemon process.
 # The setting is particularly useful for tweaking memory settings.
 # Default value: -Xmx512m -XX:MaxMetaspaceSize=256m
-org.gradle.jvmargs=-Xmx4096m -XX:MaxMetaspaceSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
+org.gradle.jvmargs=-Xmx2048m -XX:MaxMetaspaceSize=512m
+
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 
-# CMake fix for long paths
-android.native.buildOutput=verbose
-
 # AndroidX package structure to make it clearer which packages are bundled with the
 # Android operating system, and which are packaged with your app's APK
 # https://developer.android.com/topic/libraries/support-library/androidx-rn
-android.enableJetifier=true
 android.useAndroidX=true
 
 # Enable AAPT2 PNG crunching
 android.enablePngCrunchInReleaseBuilds=true
-
-# NDK path fix
-android.ndkVersion=27.1.12297006
 
 # Use this property to specify which architecture you want to build.
 # You can also override it from the CLI using
@@ -63,9 +57,3 @@ expo.useLegacyPackaging=false
 
 # Whether the app is configured to use edge-to-edge via the app config or `react-native-edge-to-edge` plugin
 expo.edgeToEdgeEnabled=true
-
-
-# Add these lines to handle long paths
-android.enableCmakePathMapping=true
-android.native.buildOutput=verbose
-org.gradle.jvmargs=-Xmx4096m -XX:MaxMetaspaceSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8 -Duser.country=US -Duser.language=en
