--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
     "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-community/netinfo": "11.4.1",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.16",
@@ -30,8 +31,10 @@
     "expo-font": "~13.3.2",
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.4.0",
+    "expo-image-picker": "^16.1.4",
     "expo-linking": "~7.1.7",
     "expo-location": "~18.1.6",
+    "expo-notifications": "^0.31.4",
     "expo-router": "~5.1.4",
     "expo-splash-screen": "~0.30.10",
     "expo-status-bar": "~2.2.3",
@@ -50,8 +53,7 @@
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
-    "stripe": "^18.4.0",
-    "@react-native-community/netinfo": "11.4.1"
+    "stripe": "^18.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
