--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-native-iap": "^13.0.3",
     "react-native-maps": "1.20.1",
     "react-native-reanimated": "~3.17.4",
+    "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-url-polyfill": "^2.0.0",
