--- a/app.json
+++ b/app.json
@@ -1,11 +1,11 @@
 {
   "expo": {
-    "name": "WineWildernessWanderlust",
-    "slug": "WineWildernessWanderlust",
+    "name": "WanderGuideAudioTours",
+    "slug": "WanderGuideAudioTours",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/wander-guide-logo.png",
-    "scheme": "winewildernesswanderlust",
+    "scheme": "WanderGuideAudioTours",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "ios": {
@@ -22,7 +22,7 @@
         "backgroundColor": "#ffffff"
       },
       "edgeToEdgeEnabled": true,
-      "package": "com.anonymous.WineWildernessWanderlust"
+      "package": "com.anonymous.WanderGuideAudioTours"
     },
     "web": {
       "bundler": "metro",
