--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@stripe/stripe-react-native": "0.45.0",
     "@supabase/supabase-js": "^2.53.0",
     "expo": "~53.0.20",
+    "expo-audio": "~0.4.9",
     "expo-av": "~15.1.7",
     "expo-blur": "~14.1.5",
     "expo-constants": "~17.1.7",
@@ -40,6 +41,7 @@
     "expo-status-bar": "~2.2.3",
     "expo-symbols": "~0.4.5",
     "expo-system-ui": "~5.0.10",
+    "expo-video": "~2.2.2",
     "expo-web-browser": "~14.2.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
